--- a/index.html
+++ b/index.html
@@ -2,7 +2,23 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Demystifying Email Design</title>
+  <title>Email Design Template</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 </html>
+
+<body style="margin: 0; padding: 0;">
+ <table border="1" cellpadding="0" cellspacing="0" width="100%">
+  <tr>
+   <td>
+    <table align="center" border="1" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
+ <tr>
+  <td>
+   Hello!
+  </td>
+ </tr>
+</table>
+   </td>
+  </tr>
+ </table>
+</body>
