added two more rows to the table inside the table

--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
    Hello!
   </td>
  </tr>
+ <tr>
+ 	<td>
+ 	Hello hello!
+ 	</td>
+ </tr>
+ <tr>
+ <td>
+ 	Hello Hello There!
+ </td>
+ </tr>
 </table>
    </td>
   </tr>
