added background colors to cells

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
    <td>
     <table align="center" border="1" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
  <tr>
-  <td>
+  <td bgcolor="#70bbd9">
    Hello!
   </td>
  </tr>
  <tr>
- 	<td>
+ 	<td bgcolor="#ffffff">
  	Hello hello!
  	</td>
  </tr>
  <tr>
- <td>
+ <td bgcolor="#ee4c50">
  	Hello Hello There!
  </td>
  </tr>
