--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
    <td>
     <table align="center" border="1" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
  <tr>
-  <td bgcolor="#70bbd9">
-   Hello!
+  <td align="center" bgcolor="#70bbd9" style="padding: 50px 0 30px 0;">
+  <img src="images/cherry_tree_vector___sakura_by_dutchscout-d4ikhn7.png" alt="Cherry Tree By Sakura" width="300" height="230" style="display: block;"/>
   </td>
  </tr>
  <tr>
