added images, and inserted more tables and text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <td>
     <table align="center" border="1" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
  <tr>
-  <td align="center" bgcolor="#70bbd9" style="padding: 50px 0 30px 0;">
+  <td align="center" bgcolor="#70bbd9" style="padding: 50px 0 30px 50px;">
   <img src="images/cherry_tree_vector___sakura_by_dutchscout-d4ikhn7.png" alt="Cherry Tree By Sakura" width="300" height="230" style="display: block;"/>
   </td>
  </tr>
@@ -22,12 +22,12 @@
  	<table border="1" cellpadding="0" cellspacing="0" width="100%">
   <tr>
    <td>
-    Row 1
+    Hello! Welcome to my first html email!
    </td>
   </tr>
   <tr>
    <td>
-    Row 2
+    This is an email that I wrote from scratch with the help of http://webdesign.tutsplus.com/articles/build-an-html-email-template-from-scratch--webdesign-12770. I find that making html emails are helping me develop my basic html and css skills as well as allowing me to be create about how I communicate via email. Fun times!!
    </td>
   </tr>
   <tr>
@@ -35,13 +35,35 @@
     <table border="1" cellpadding="0" cellspacing="0" width="100%">
  <tr>
   <td width="260" valign="top">
-   Put something here
+    <table border="1" cellpadding="0" cellspacing="0" width="100%">
+    <tr>
+     <td>
+      <img src="images/libraCoin.gif" alt="" width="100%" height="260" style="display: block;" />
+     </td>
+    </tr>
+    <tr>
+     <td style="padding: 25px 0 0 0;">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan dictum, nisi libero ultricies ipsum, in posuere mauris neque at erat.
+     </td>
+    </tr>
+   </table>
   </td>
   <td style="font-size: 0; line-height: 0;" width="20">
    &nbsp;
   </td>
   <td width="260" valign="top">
-   And put something here
+   <table border="1" cellpadding="0" cellspacing="0" width="100%">
+    <tr>
+     <td>
+      <img src="images/QRcode.png" alt="" width="100%" height="260" style="display: block;" />
+     </td>
+    </tr>
+    <tr>
+     <td style="padding: 25px 0 0 0;">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan dictum, nisi libero ultricies ipsum, in posuere mauris neque at erat.
+     </td>
+    </tr>
+   </table>
   </td>
  </tr>
 </table>
