--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
  	<td bgcolor="#ffffff" style="padding: 40px 30px 40px 30px;">
  	<table border="1" cellpadding="0" cellspacing="0" width="100%">
   <tr>
-   <td>
+   <td style="font-family: Times,sans-serif; font-size:24px;">
     Hello! Welcome to my first html email!
    </td>
   </tr>
   <tr>
-   <td>
+   <td style="font-family: Times,sans-serif; font-size:12px; padding:20px 0 30px 0;">
     This is an email that I wrote from scratch with the help of http://webdesign.tutsplus.com/articles/build-an-html-email-template-from-scratch--webdesign-12770. I find that making html emails are helping me develop my basic html and css skills as well as allowing me to be create about how I communicate via email. Fun times!!
    </td>
   </tr>
@@ -42,7 +42,7 @@
      </td>
     </tr>
     <tr>
-     <td style="padding: 25px 0 0 0;">
+     <td style="font-family: Times,sans-serif; font-size:12px; padding: 25px 0 0 0;">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan dictum, nisi libero ultricies ipsum, in posuere mauris neque at erat.
      </td>
     </tr>
@@ -59,7 +59,7 @@
      </td>
     </tr>
     <tr>
-     <td style="padding: 25px 0 0 0;">
+     <td style="font-family: Times,sans-serif; font-size:12px; padding: 25px 0 0 0;">
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. In tempus adipiscing felis, sit amet blandit ipsum volutpat sed. Morbi porttitor, eget accumsan dictum, nisi libero ultricies ipsum, in posuere mauris neque at erat.
      </td>
     </tr>
@@ -77,9 +77,9 @@
  <td bgcolor="#ee4c50" style="padding:30px;">
  	<table border="1" cellpadding="0" cellspacing="0" width="100%">
  <tr>
-  <td width="75%">
+  <td style="color: #ffffff; font-family: Arial, sans-serif; font-size: 14px;" width="75%">
    Developed by Kate Pond, at home 2015<br/>
- Unsubscribe to this newsletter instantly
+ <a href="#" style="color: #ffffff;"><font color="#ffffff">Unsubscribe</font></a> to this newsletter instantly
   </td>
   <td>
    <td align="right">
