--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <table border="0" cellpadding="0" cellspacing="0" width="100%">
   <tr>
    <td>
-    <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;">
+    <table align="center" border="0" cellpadding="0" cellspacing="0" width="600" style="border-collapse: collapse;border: 1px solid #cccccc;">
  <tr>
   <td align="center" bgcolor="#70bbd9" style="padding: 50px 0 30px 50px;">
   <img src="images/cherry_tree_vector___sakura_by_dutchscout-d4ikhn7.png" alt="Cherry Tree By Sakura" width="300" height="230" style="display: block;"/>
