Changed doc type once more and added a comment from a Lynda.com video on creating responsive html emails.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/strict.dtd"> <!-- Some developers will recommend this DOC type because some HTML email clients will actually strip whatever DOC type you have and put this in. -->
+<html>
  <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>Email Design Template</title>
